# CUDA_MLP

./: .clang-format  .gitignore  CMakeLists.txt  FUTURE_IMPORVEMENTS.md  Makefile  README.md  main.cpp  main.py  test_cuda_headers.cpp
benchmarking/: nn-numpy.py
bindings/: TODO.md
cuda/: layer_kernels.cu  tensor_kernels.cu
include/: cuda_utils.hpp  layer_kernels.hpp  mlp.hpp  module.hpp  neural_network.hpp  tensor.hpp  tensor_kernels.hpp
src/: mlp.cpp  module.cpp  neural_network.cpp  tensor.cpp
